--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -2,6 +2,7 @@
   position: absolute;
   top: 0;
   width: 100%;
+  height: 100vh;
   display: grid;
   grid-template-columns: 9rem 1fr 1fr 5%;
   grid-template-rows: 68px 1fr 1fr;
