--- a/styles/style.css
+++ b/styles/style.css
@@ -929,6 +929,7 @@ header .menu-btn.open .menu-btn__burger::after {
   position: absolute;
   top: 0;
   width: 100%;
+  height: 100vh;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 9rem 1fr 1fr 5%;
