--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -251,6 +251,7 @@ header {
     align-self: flex-start;
     justify-self: flex-start;
     margin-left: 8rem;
+    font-size: 5rem;
     span {
       margin-left: 12rem;
     }
