--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -1,36 +1,37 @@
 .onas {
+  position: absolute;
+  top: 0;
+  width: 100%;
   display: grid;
   height: 100vh;
   align-content: stretch;
-  grid-template-columns: 9rem 2fr 1fr 1fr 5%;
-  grid-template-rows: 68px 1fr 1fr;
+  grid-template-columns: 9rem 2.2fr 1fr 1fr 5%;
+  grid-template-rows: 68px 1fr 1.3fr;
 
   h2 {
     grid-row: 2/3;
     grid-column: 2/3;
-    align-self: flex-end;
-    justify-self: flex-start;
-    margin-left: 5rem;
-    margin-bottom: 15rem;
+    align-self: center;
+    justify-self: center;
   }
-  p {
+  .opis {
     text-align: justify;
     grid-row: 3/4;
     grid-column: 2/3;
-    align-self: flex-start;
-    justify-self: flex-start;
-    margin:5rem;
- 
+    align-self: start;
+    justify-self: start;
+    padding: 0 7rem 0 7rem;
   }
 
   .pike {
     grid-row: 2/3;
-    grid-column: 2/4;
-    align-self: flex-end;
-    justify-self: flex-start;
+    grid-column: 2/3;
+    align-self: center;
+    justify-self: center;
     position: relative;
-    left: 5rem;
-    top: -15rem;
+    top: 5rem;
+    left: 2rem;
+
     .homedot {
       margin: 0 20px 0 0;
       height: 15px;
