--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -429,12 +429,13 @@ header {
       }
     }
     p {
+      font-size: 3rem;
       grid-row: 3/4;
       grid-column: 2/5;
       align-self: start;
       justify-self: center;
       margin-bottom: 0rem;
-      margin-top: -7%;
+      margin-top: 3%;
       margin-left: 0;
       span {
         margin-left: 8rem;
