--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -19,8 +19,12 @@ header {
       flex: 1;
       list-style: none;
     }
+    .logo-link{
+      flex:2;
+    }
     #logo1 {
       flex: 2;
+      height: 5rem;
     }
   }
 
