--- a/styles/style.css
+++ b/styles/style.css
@@ -317,10 +317,17 @@ header nav ul {
   list-style: none;
 }
 
+header nav .logo-link {
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+}
+
 header nav #logo1 {
   -webkit-box-flex: 2;
       -ms-flex: 2;
           flex: 2;
+  height: 5rem;
 }
 
 header .menu-btn {
