--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,6 +9,43 @@ html {
   box-sizing: border-box;
 }
 
+
+/*preloader*/
+.preload{
+  position:fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background: #061a33;
+  z-index: 1000000;
+  display:flex;
+  justify-content: center;
+  align-content: center;
+  transition: opacity 1s ease;
+ #preload-logo{
+   width: 30vw;
+   .wave{
+     stroke-dasharray: 1000;
+     stroke-dashoffset: 1000;
+     animation : dash 1s ease alternate infinite ;
+   }
+   @keyframes dash {
+     from{
+       stroke-dashoffset: 1000;
+     }
+     to{
+       stroke-dashoffset: 0;
+     }
+     
+   }
+ }
+}
+
+.preload-finish{
+  opacity: 0;
+  pointer-events: none;
+}
+
 body {
   color: #eeffff;
   background-color: #061a33;
@@ -276,6 +313,7 @@ body.day #fp-nav ul li a span,
     top: 84%;
   }
 }
+
 
 @import "home";
 @import "projects";
