--- a/styles/style.css
+++ b/styles/style.css
@@ -28,8 +28,8 @@ html {
           justify-content: center;
   -ms-flex-line-pack: center;
       align-content: center;
-  -webkit-transition: opacity 1s ease;
-  transition: opacity 1s ease;
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
 }
 
 .preload #preload-logo {
@@ -62,7 +62,7 @@ html {
 }
 
 .preload-finish {
-  opacity: 0;
+  display: none;
   pointer-events: none;
 }
 
@@ -72,6 +72,93 @@ body {
   font-family: "Titillium Web", sans-serif;
   -webkit-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
+}
+
+/* rotate your device*/
+.rotate {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background: #061a33;
+  z-index: 100000;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  display: none;
+}
+
+.rotate .phone {
+  height: 50px;
+  width: 100px;
+  z-index: 1000001;
+  border: 3px solid white;
+  border-radius: 10px;
+  -webkit-animation: rotate 1.5s ease-in-out infinite alternate;
+          animation: rotate 1.5s ease-in-out infinite alternate;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  /*display: none;*/
+}
+
+.rotate .message {
+  color: white;
+  font-size: 1.5rem;
+  margin-top: 40px;
+  text-align: center;
+  /*display: none;*/
+}
+
+@-webkit-keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  50% {
+    -webkit-transform: rotate(-90deg);
+            transform: rotate(-90deg);
+  }
+  100% {
+    -webkit-transform: rotate(-90deg);
+            transform: rotate(-90deg);
+  }
+}
+
+@keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  50% {
+    -webkit-transform: rotate(-90deg);
+            transform: rotate(-90deg);
+  }
+  100% {
+    -webkit-transform: rotate(-90deg);
+            transform: rotate(-90deg);
+  }
+}
+
+@media only screen and (max-device-width: 812px) and (orientation: landscape) {
+  .rotate {
+    display: block;
+    display: -ms-grid;
+    display: grid;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 /*vse za dnevno temo*/
