--- a/styles/style.scss
+++ b/styles/style.scss
@@ -21,7 +21,7 @@ html {
   display:flex;
   justify-content: center;
   align-content: center;
-  transition: opacity 1s ease;
+  transition: all 1s ease;
  #preload-logo{
    width: 30vw;
    .wave{
@@ -41,8 +41,11 @@ html {
  }
 }
 
+
+
+
 .preload-finish{
-  opacity: 0;
+  display: none;
   pointer-events: none;
 }
 
@@ -51,6 +54,63 @@ body {
   background-color: #061a33;
   font-family: "Titillium Web", sans-serif;
   transition: all 1s ease-in-out;
+}
+
+/* rotate your device*/
+.rotate{
+  position:fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background: #061a33;
+  z-index: 100000;
+  display:grid;
+  flex-direction: column;
+  align-content: center;
+  display: none;
+  
+  .phone {
+  height: 50px;
+  width: 100px;
+  z-index: 1000001;
+  border: 3px solid white;
+  border-radius: 10px;
+  animation: rotate 1.5s ease-in-out infinite alternate;
+  justify-self: center;
+  /*display: none;*/
+  }
+
+.message {
+  color: white;
+  font-size: 1.5rem;
+  margin-top: 40px;
+  text-align: center;
+  
+  /*display: none;*/
+}
+
+@keyframes rotate {
+  0% {
+		transform: rotate(0deg)
+	}
+	50% {
+		transform: rotate(-90deg)
+	}
+	100% {
+		transform: rotate(-90deg)
+	}
+}
+
+}
+
+@media only screen and (max-device-width: 812px) and (orientation: landscape) {
+  .rotate {
+    display: block;
+    display:grid;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+  }
 }
 
 /*vse za dnevno temo*/
