--- a/styles/style.scss
+++ b/styles/style.scss
@@ -355,7 +355,7 @@ body.day #fp-nav ul li a span,
   .sectionname {
     writing-mode: horizontal-tb;
     font-size: 1.5rem;
-    left: 4rem;
+    left: 2rem;
     top: 92vh;
   }
 
@@ -371,8 +371,9 @@ body.day #fp-nav ul li a span,
 
   #fp-nav.fp-left {
     transform:rotate(-90deg);
-    top:88%;
-    left:43%;
+    top:92vh;
+    left:35vw;
+    bottom: 0;
   }
 
 
