--- a/styles/style.scss
+++ b/styles/style.scss
@@ -365,7 +365,8 @@ body.day #fp-nav ul li a span,
     border-top: 2pt solid #ff4d5a;
     width: 100vw;
     position: fixed;
-    top: 92vh;
+    bottom: 8vh;
+    top:92vh;
     margin:0;
   }
 
