--- a/styles/style.css
+++ b/styles/style.css
@@ -413,6 +413,7 @@ body.day #fp-nav ul li a span,
     border-top: 2pt solid #ff4d5a;
     width: 100vw;
     position: fixed;
+    bottom: 8vh;
     top: 92vh;
     margin: 0;
   }
