--- a/styles/style.css
+++ b/styles/style.css
@@ -409,6 +409,7 @@ body.day #fp-nav ul li a span,
   }
   .verticalLine {
     display: box;
+    height: 100%;
     border: 0;
     border-top: 2pt solid #ff4d5a;
     width: 100vw;
